# skills-secure-code-game

./: .gitignore
Season-1/Level-1/: tests.py
Season-1/Level-2/: tests.c
Season-1/Level-3/: code.py
Season-1/Level-4/: code.py  tests.py
Season-1/Level-5/: code.py  tests.py
Season-2/Level-3/: code.js  package-lock.json  package.json  tests.js
Season-2/Level-4/: code.py  tests.py
Season-2/Level-5/: code.js  package-lock.json  package.json  tests.js
projects/datapipe/: README.md  pyproject.toml
projects/datapipe/datapipe/: __init__.py  context.py  metrics.py  pipeline.py  retry.py  step.py
projects/datapipe/datapipe/sinks/: __init__.py  base.py  csv_sink.py  json_sink.py  memory_sink.py
projects/datapipe/datapipe/sources/: __init__.py  base.py  csv_source.py  http_source.py  json_source.py
projects/envguard/: README.md  package.json  tsconfig.json
projects/envguard/src/: errors.ts  index.ts  parser.ts  types.ts  validators.ts
projects/envguard/tests/: guard.test.ts
projects/gitlens-tui/: Cargo.toml  README.md
projects/gitlens-tui/src/: app.rs  git.rs  main.rs  ui.rs
projects/shellbound/: README.md  dungeon.py  entities.py  game.py  parser.py  renderer.py
